src/objects/NA_Membership_Referral_Questions__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Needs Assessment</label>
        <referenceTo>Needs_Assesment__c</referenceTo>
        <relationshipLabel>NA_Membership Referral Questions</relationshipLabel>
        <relationshipName>NA_Membership_Referral_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Want_to_Refer_Membership__c</fullName>
        <label>Want to Refer Membership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NA_Membership Referral Question</label>
    <nameField>
        <label>Membership Referral Questions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NA_Membership Referral Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>